tests/fail/null/4.has
function main() : int {
    var z : int
    z = NULL

    return 0
}